Alignment bug fixes

--- a/src/Components/checkoutProduct.css
+++ b/src/Components/checkoutProduct.css
@@ -82,7 +82,7 @@
     .checkoutProduct button {
         font-size: 12px;
         margin-top: 5px;
-        margin-left:102px;
+        margin-left:99px;
     }
 
     .checkoutProduct button.remove-button {
